Resolved Migrations problem
added comment in auction_listing model and migrated, added "" to empty fields, then removed it and migrated again causing integrity issues.

resolved by deleting the later migration files with "comment" in title

--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -85,6 +85,15 @@ body {
     font-weight: bold;
   }
 
+  #image_thumbnail {
+    width: 150px;
+    height: 150px;
+  }
+
+  #ul_no_bullets {
+    list-style: none;
+  }
+
 
 
 
