--- a/auctions/templates/auctions/listing_detail.html
+++ b/auctions/templates/auctions/listing_detail.html
@@ -9,7 +9,7 @@
         onclick="window.open('{{ listing.image.url }}', '_blank', 'width=800', 'height=600');" style="cursor: pointer">
 </div>
 
-<div>
+<div id="title">
     <h2>{{ listing.title }}</h2>
     <!--if user is seller, show "Edit Auction" hyperlink  -->
     {% if listing.seller.id == user.id %}
@@ -19,16 +19,15 @@
 
 <div>Listed: {{ listing.timestamp }}</div>
 <!-- set message styling according to text in return value -->
-{{ time_remaining_message }}
 
-<!-- <div 
-    id="{% if 'Hurry!' in time_remaining %}closing_time_soon{% elif 'Auction Closed' in time_remaining %}closing_time_closed{% else %}closing_time_running{% endif %}">
-        {{ time_remaining|localtime }}
-    </div> -->
+<div
+    id="{% if 'Hurry' in time_remaining_message %}closing_time_soon{% elif 'Auction Closed' in time_remaining_message %}closing_time_closed{% else %}closing_time_running{% endif %}">
+    {{ time_remaining_message }}
+</div>
 
 <!-- price -->
-<div>
-    <div>
+<div id="price_bid_container">
+    <div id="listing_price">
         ${{ listing.price }}
     </div>
     <div>
@@ -46,7 +45,7 @@
     {% endif %}
 
     {% if message %}
-    <div>{{ message }}</div>
+    <div id="message">{{ message }}</div>
     {% endif %}
 </div>
 
@@ -59,9 +58,8 @@
     {% if user.is_authenticated and listing.seller.id != user.id and listing.is_open %}
 
     <!-- Bid Button -->
-    <form action="{% url 'listing_detail' listing.id %}" method="POST">
+    <form id="bid_form" action="{% url 'listing_detail' listing.id %}" method="POST">
         {% csrf_token %}
-        <label for="bid_amount" name="bid_amount">Place your bid $</label>
         <input type="number" id="bid_amount" name="bid_amount" step="0.01" min="0.01" required>
         <button type="submit" name="action" value="bid">Place Bid</button>
     </form>
@@ -82,40 +80,45 @@
     {% endif %}
 </div>
 </div>
-
-<h4>Details:</h4>
-<ul>
-    <li>
-        Seller: {{ listing.seller }}
-    </li>
-    <li>
-        Category: {{ listing.category }}
-    </li>
-    {{ listing.description }}
-</ul>
-
-{% if user.is_authenticated %}
-<h4>Add a comment:</h4>
-<form action="{% url 'listing_detail' listing.id %}" method="POST">
-    {% csrf_token %}
-    {{ comment_form.as_p }} <!-- Render the form fields -->
-    <button type="submit" name="action" value="submit_comment">Submit Comment</button>
-</form>
-<div>
+<div id="details">
+    <h4>Details:</h4>
     <ul>
-        {% if listing.comments %}
-        Previous Comments:
-        {% for comment in comments %}
         <li>
-            {{ comment.content }}
-            <p>
-                - by {{ comment.user.username }} on {{ comment.timestamp|localtime }}
-            </p>
+            Seller: {{ listing.seller }}
         </li>
-        {% endfor %}
-        {% endif %}
+        <li>
+            Category: {{ listing.category }}
+        </li>
+        <li>
+            {{ listing.description }}
+        </li>
     </ul>
+    <div id="comment_block">
+        {% if user.is_authenticated %}
+        <div>Add a comment:</div>
+        <form action="{% url 'listing_detail' listing.id %}" method="POST">
+            {% csrf_token %}
+            {{ comment_form.as_p }} <!-- Render the form fields -->
+            <button type="submit" name="action" value="submit_comment">Submit Comment</button>
+        </form>
+        <div id="comments_heading">
+            {% if listing.comments %}
+            Previous Comments:t
+            <ul>
+                {% for comment in comments %}
+                <li id="comments">
+                    {{ comment.content }}
+                    <p>
+                        - by {{ comment.user.username }} on {{ comment.timestamp|localtime }}
+                    </p>
+                </li>
+                {% endfor %}
+            </ul>
+            {% else %}
+                No comments yet. Be the first to post a comment!
+            {% endif %}
+        </div>
+        {% endif %}
+    </div>
 </div>
-{% endif %}
-
 {% endblock %}
